feat: add client command to open config screen. no longer showing empty config tabs